gitops/legacy-app/base/database.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  - name: psql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    kubevirt.io/domain: postgresql
  type: ClusterIP
