gitops/legacy-app/base/eap.yaml
apiVersion: v1
kind: Service
metadata:
  name: jboss-eap
spec:
  ports:
  - name: ssh
    port: 22
    protocol: TCP
    targetPort: 22
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    kubevirt.io/domain: jboss-eap
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jboss-eap
spec:
  to:
    kind: Service
    name: jboss-eap
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  port:
    targetPort: http
